--- a/ecom_app/templates/store/product_detail.html
+++ b/ecom_app/templates/store/product_detail.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %}
+{% load cart_extras %}
 
 {% load static %}
 {% block content %}
@@ -18,6 +19,12 @@
 </article> <!-- gallery-wrap .end// -->
 		</aside>
 		<main class="col-md-6 border-left">
+
+<form action="{% url "add_cart" single_product.id %}" method="POST">
+
+{% csrf_token %}
+
+
 <article class="content-body">
 
 <h2 class="title">{{single_product.product_name}}</h2>
@@ -33,39 +40,29 @@
 	<div class="row">
 		<div class="item-option-select">
 			<h6>Choose Color</h6>
-			<div class="btn-group btn-group-sm btn-group-toggle" data-toggle="buttons">
-			  <label class="btn btn-light">
-			    <input type="radio" name="radio_color"> Silver
-			  </label>
-			  <label class="btn btn-light">
-			    <input type="radio" name="radio_color" > Gray
-			  </label>
-			  <label class="btn btn-light active">
-			    <input type="radio" name="radio_color checked"> Gold
-			  </label>
-			  <label class="btn btn-light">
-			    <input type="radio" name="radio_color"> Black
-			  </label>
-			</div> 
+			<select name="color" class="form-control" id="">
+				<option value="" disabled selected>-- Select Color --</option>
+
+				<option value="red">Red</option>
+				{% for i in single_product.variation_set.colors  %}
+					<option value="{{i.variation_value | lower }}">{{i.variation_value | capfirst}}</option>
+
+				{% endfor %}
+			</select>
 		</div>
 	</div> <!-- row.// -->
 	<div class="row">
 		<div class="item-option-select">
 			<h6>Select Size</h6>
-			<div class="btn-group btn-group-sm btn-group-toggle" data-toggle="buttons">
-			  <label class="btn btn-light">
-			    <input type="radio" name="radio_color"> S
-			  </label>
-			  <label class="btn btn-light active">
-			    <input type="radio" name="radio_color" checked> M
-			  </label>
-			  <label class="btn btn-light">
-			    <input type="radio" name="radio_color"> L
-			  </label>
-			  <label class="btn btn-light">
-			    <input type="radio" name="radio_color"> XL
-			  </label>
-			</div> 
+						<select name="size" class="form-control" id="">
+				<option value="" disabled selected>-- Select size --</option>
+
+				{% for i in single_product.variation_set.sizes  %}
+					<option value="{{i.variation_value | lower}}">{{i.variation_value | capfirst }}</option>
+
+				{% endfor %}
+			</select>
+
 		</div>
 	</div> <!-- row.// -->
 	<hr>
@@ -74,13 +71,15 @@
         Out of Stock
     </h5>
 {% else %}
-    <a href="{{ single_product.get_url }}" class="btn btn-primary">
+
+    <button type="submit" href=" " class="btn btn-primary">
         <span class="text">Add to cart</span>
         <i class="fas fa-shopping-cart"></i>
-    </a>
+	</button>
 {% endif %}
 
 </article> <!-- product-info-aside .// -->
+</form>
 		</main> <!-- col.// -->
 	</div> <!-- row.// -->
 </div> <!-- card.// -->
