--- a/ecom_app/templates/includes/navbar.html
+++ b/ecom_app/templates/includes/navbar.html
@@ -1,4 +1,7 @@
 {% load static %}
+
+
+
 <header class="section-header">
 <nav class="navbar p-md-0 navbar-expand-sm navbar-light border-bottom">
 <div class="container">
@@ -83,13 +86,14 @@
 					{% endif %}
 					<a href="{%url 'cart'%}" class="widget-header pl-3 ml-3">
 						<div class="icon icon-sm rounded-circle border"><i class="fa fa-shopping-cart"></i></div>
-						<span class="badge badge-pill badge-danger notify">{{cart_coutn}}</span>
+						<span class="badge badge-pill badge-danger notify">{{cart_count}}</span>
 					</a>
 				</div> <!-- widgets-wrap.// -->
 			</div> <!-- col.// -->
 </div> <!-- row.// -->
 	</div> <!-- container.// -->
 </section> <!-- header-main .// -->
+
 
 
 
