product order and payments

--- a/ecom_app/templates/base.html
+++ b/ecom_app/templates/base.html
@@ -28,6 +28,11 @@
 <!-- custom javascript -->
 <script src="{% static 'js/script.js' %}" type="text/javascript"></script>
 
+
+
+ <script src="https://www.paypal.com/sdk/js?client-id=Aai7tjEMIbHlS1is_KpMAIEJx0eSPBuOCVQ1mHYN5zN8-M-6JYXVl6n6CDLQjPW9wsIWf7HDS1L4BFJS&currency=USD"></script>
+
+
 <script type="text/javascript">
 /// some script
 
